tests/parser/invalidinput/multidecl2.idp
include <mx>

vocabulary V{
	P Q
}

procedure main(){
	return 1
}
